--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node dist/app.js",
+    "build": "tsc",
+    "dev": "tsx watch src/*"
   },
   "keywords": [],
   "author": "",
@@ -16,13 +18,15 @@
     "express": "^4.21.0",
     "http-errors": "^2.0.0",
     "mongoose": "^8.6.2",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.1.4"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/http-errors": "^2.0.4",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.5.5",
     "prisma": "^5.19.1",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.19.1",
     "typescript": "^5.6.2"
   }
 }
