--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.2",
     "morgan": "^1.10.0",
+    "redis": "^4.7.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
